module1-lab-Your-First-Component

--- a/src/Counter.css
+++ b/src/Counter.css
@@ -29,6 +29,13 @@
     }
 }
 
+input.main_input {
+    margin-left: 5px;
+    margin-right: 5px;
+
+    text-align: center;
+}
+
 @media (prefers-reduced-motion: no-preference) {
     a:nth-of-type(2) .logo {
         animation: logo-spin infinite 20s linear;
